--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,16 @@ python:
   - "3.7"
   - "3.8"
   
+
+before_install:
+  pip install codecov
+
+
 install: 
   "pip install -r requirements.txt"
 
 script:
     - python setup.py install
+    - coverage run -m py.test tests
+    - bash <(curl -s https://codecov.io/bash)
+  
